--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,9 +1,9 @@
-user_onedrive: C:/Users/cpeak/Puget Sound Regional Council/
 
-run_demo: true
-run_density_and_freight: false
+run_demo: false
+run_density_and_freight: true
 
-# rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
 rtp_transit_data_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transit
 activity_units_path: /GIS - Sharing/Projects/Transportation/RTP_2026/activity_units/Activity_Units_2026_RTP.gdb
 fgtswa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/freight/FGTSWA.gdb
+
+rtp_output_path: /GIS - Sharing/Projects/Transportation/RTP_2026/future_system_output
