--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,22 +1,16 @@
 
 run_demo: false
-<<<<<<< HEAD
 run_density_and_freight: false
 
 run_frequent_transit_routes_and_signal: true
-=======
-run_density_and_freight: true
+run_density_and_freight: false
 run_transit_stop_intersections: false
->>>>>>> b39dd5d6c0bd3e54c2b07c9f6c33b47f5e6c3dee
 
 # rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
 rtp_transit_data_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transit
-<<<<<<< HEAD
 rtp_its_signals_path: /GIS - Sharing/Projects/Transportation/RTP_2026/its
-=======
 rtp_transit_network_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transit/Transit_Network_2050_Scenario2b.gdb
 rtp_efa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/equity_focus_areas/efa_3groupings_1SD/equity_focus_areas_2023_acs.gdb
->>>>>>> b39dd5d6c0bd3e54c2b07c9f6c33b47f5e6c3dee
 activity_units_path: /GIS - Sharing/Projects/Transportation/RTP_2026/activity_units/Activity_Units_2026_RTP.gdb
 fgtswa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/freight/FGTSWA.gdb
 
