add density_and_signals.py.  Fixes #8

--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,6 +1,7 @@
 
 run_demo: false
-run_density_and_freight: true
+run_density_and_freight: false
+run_density_and_signals: true
 run_transit_stop_intersections: false
 
 # rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
@@ -9,8 +10,10 @@ rtp_transit_network_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transi
 rtp_efa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/equity_focus_areas/efa_3groupings_1SD/equity_focus_areas_2023_acs.gdb
 activity_units_path: /GIS - Sharing/Projects/Transportation/RTP_2026/activity_units/Activity_Units_2026_RTP.gdb
 fgtswa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/freight/FGTSWA.gdb
+its_signals_path: /GIS - Sharing/Projects/Transportation/RTP_2026/its/ITS_Signals_2024_Final.gdb
 
-rtp_output_path: /GIS - Sharing/Projects/Transportation/RTP_2026/future_system_output
+rtp_output_path: /GIS - Sharing/Projects/Transportation/RTP_2026/future_system_output/
+rtp_output_gdb_name: future_system_output.gdb
 
 mile_in_ft: 5280
 acre_in_sqft: 43560
