--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,9 +1,11 @@
-user_onedrive: C:/Users/cpeak/Puget Sound Regional Council/
+user_onedrive: C:/Users/KOverby/PSRC/
 
-run_demo: true
+run_demo: false
 run_density_and_freight: false
+run_congestion_measures: true
 
 # rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
 rtp_transit_data_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transit
 activity_units_path: /GIS - Sharing/Projects/Transportation/RTP_2026/activity_units/Activity_Units_2026_RTP.gdb
 fgtswa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/freight/FGTSWA.gdb
+2050_model_run_path: N:/rtp_2026_2050/scenarios_for_sept/sc_constrained_2050/soundcast
