--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,8 +1,8 @@
-run_demo: false
-run_density_and_freight: false
+run_demo: true
+run_density_and_freight: true
 run_frequent_transit_routes_and_signal: true
-run_density_and_freight: false
-run_transit_stop_intersections: false
+run_density_and_freight: true
+run_transit_stop_intersections: true
 run_paratransit_boundary: true
 
 # rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
