--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - defaults
 dependencies:
   - aom=3.6.0=hd77b12b_0
+  - attrs=24.3.0=py313haa95532_0
   - blas=1.0=mkl
   - blosc=1.21.6=h4190f5b_0
   - bottleneck=1.4.2=py313h2cb717b_0
@@ -12,13 +13,18 @@ dependencies:
   - bzip2=1.0.8=h2bbff1b_6
   - ca-certificates=2025.9.9=haa95532_0
   - cairo=1.18.4=he9e932c_0
-  - certifi=2025.8.3=py313haa95532_0
+  - certifi=2025.10.5=py313haa95532_0
   - cffi=1.17.1=py313h827c3e9_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - click=8.1.8=py313haa95532_0
+  - click-plugins=1.1.1=pyhd3eb1b0_0
+  - cligj=0.7.2=pyhd3eb1b0_0
+  - colorama=0.4.6=py313haa95532_0
   - contourpy=1.3.1=py313h214f63a_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - dav1d=1.2.1=h2bbff1b_0
   - expat=2.7.1=h8ddb27b_0
+  - fiona=1.10.1=py313h885b0b7_1
   - folium=0.14.0=py313haa95532_0
   - fontconfig=2.14.1=hb33846d_3
   - fonttools=4.55.3=py313h827c3e9_0
@@ -73,7 +79,7 @@ dependencies:
   - numpy=2.3.1=py313ha127e54_0
   - numpy-base=2.3.1=py313haaa8b43_0
   - openjpeg=2.5.2=h9b5d1b5_1
-  - openssl=3.0.17=h35632f6_0
+  - openssl=3.0.18=h543e019_0
   - packaging=25.0=py313haa95532_0
   - pandas=2.3.2=py313h42c1672_0
   - pcre2=10.42=h0ff8eda_1
@@ -118,3 +124,10 @@ dependencies:
   - yaml=0.2.5=he774522_0
   - zlib=1.3.1=h02ab6af_0
   - zstd=1.5.6=h8880b57_0
+  - pip:
+      - greenlet==3.2.4
+      - psrcelmerpy==0.1.0
+      - pyodbc==5.2.0
+      - sqlalchemy==2.0.43
+      - typing-extensions==4.15.0
+prefix: C:\Users\cpeak\Anaconda3\envs\rtp_spatial_analysis
