adding rcp equity analysis

--- a/rtp_spatial_analysis/configs/config.yaml
+++ b/rtp_spatial_analysis/configs/config.yaml
@@ -1,9 +1,10 @@
 run_demo: false
 run_density_and_freight: false
-run_frequent_transit_routes_and_signal: true
+run_frequent_transit_routes_and_signal: false
 run_density_and_freight: false
 run_transit_stop_intersections: false
 run_paratransit_boundary: false
+run_rcp_equity_analysis: true
 
 # rtp_transit_data_path: C:/Users/cpeak/Puget Sound Regional Council/GIS - Sharing/Projects/Transportation/RTP_2026/transit
 rtp_transit_data_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transit
@@ -12,7 +13,10 @@ rtp_transit_network_path: /GIS - Sharing/Projects/Transportation/RTP_2026/transi
 rtp_efa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/equity_focus_areas/efa_3groupings_1SD/equity_focus_areas_2023_acs.gdb
 activity_units_path: /GIS - Sharing/Projects/Transportation/RTP_2026/activity_units/Activity_Units_2026_RTP.gdb
 fgtswa_path: /GIS - Sharing/Projects/Transportation/RTP_2026/freight/FGTSWA.gdb
+rcp_path: /GIS - Sharing/Projects/Transportation/RTP_2026/regional_capacity_projects/rtp_projects_2026_scenario_2b
+# equity_path: /GIS - Sharing/Projects/Transportation/RTP_2026/equity_focus_areas/efa_3groupings_1SD 
 
+# OUTPUT PATH #
 rtp_output_path: /GIS - Sharing/Projects/Transportation/RTP_2026/future_system_output
 
 mile_in_ft: 5280
